# Robot_LLM

./: .gitignore  .windsurfrules  AUTONOMOUS_NAVIGATION_GUIDE.md  CLIENT_INTEGRATION_GUIDE.md  DYNAMIC_DISCOVERY_GUIDE.md  GAZEBO_SETUP.md  MIGRATION_SUMMARY.md  NLP_PARSER.md  README.md  README_ROS2_MIGRATION.md  ROBOMP2_EXPLANATION.md  ROBOMP2_INTEGRATION.md  ROBOT_COMMUNICATION_SYSTEM.md  ROBOT_GUI_README.md  ROBOT_INTEGRATION_GUIDE.md  ROBOT_SENSOR_INTEGRATION_GUIDE.md  ROBOT_UNIFIED_INTEGRATION_GUIDE.md  UNIFIED_SYSTEM_GUIDE.md  VILA_FIXES_SUMMARY.md  VILA_GUI_README.md  VILA_ROBOT_PIPELINE_DIAGRAM.md  VLM_SENSOR_PROCESSING.md  build_ros2_system.sh  cleanup_http_dependencies.py  colcon_build.sh  debug_vila_server.py  debug_vila_simple.py  http_cleanup_report.md  launch_ros2_system.py  lidar_filter_test.py  main.py  main_vila.py  migrate_to_unified_system.py  monitor_lidar.py  monitor_sensors.sh  ollama_cam.py  requirements.txt  requirements_ros2.txt  requirements_unified.txt  robomp2_policies.pkl  (+23 more)
.continue/rules/: new-rule.yaml
deprecated_http_files/: README.md
gazebo_sim/robot_sim/: CMakeLists.txt  package.xml
gazebo_sim/robot_sim/config/: bridge.yaml
gazebo_sim/robot_sim/launch/: gazebo_vila_integration.launch.py  mecanum_working.launch.py
gazebo_sim/robot_sim/models/aws_robomaker_residential_DeskPortraitA_01/meshes/: aws_DeskPortraitA_01_visual.DAE
gazebo_sim/robot_sim/models/aws_robomaker_residential_DeskPortraitA_02/meshes/: aws_DeskPortraitA_01_visual.DAE
gazebo_sim/robot_sim/worlds/: mecanum_working.sdf  small_house.world
robot_msgs/: package.xml
(+65 files in other folders)
